# ropha_controller_interface

./: CMakeLists.txt  README.md  Trajectory_Goal_Written.txt  package.xml
Shyam_Trajectory/: Trajectory.py  old try  shyam_final.txt
Trajectory/: Trajectory.py  shyam.txt  shyam_json_1.json  trial
shyam/: .project  JSON_TemplateData.txt  Method Trial.py  ROSmsg.py  Shyam Test.py  convert.txt  history.py  shyam.json  shyam.py  shyam_1.py  shyam_2.json  shyam_3.json  shyam_final.json  shyam_final.txt  shyam_new.txt  shyam_newdata.json  temp.py  untitled1.py
src/: .~lock.trajectory.json#  0.json  1.json  2.json  3.json  4.json  5.json  New_Trajectory_File.py  ReadData.py  Trajectory.py  Trajectory1.py  Trajectory_Data_Left_arm.json  Trajectory_Data_Right_arm.json  file.json  shyam_final.txt  shyam_json_1.json  trajectory.json  trial new.py
