<?xml version="1.0"?>
<package format="2">
  <name>ropha_controller_interface</name>
  <version>0.0.0</version>
  <description>The ropha_controller_interface package</description>

  <maintainer email="mjp@todo.todo">mjp</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>boost</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
